<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".upcoming_events_fragment.ui.UpcomingEventsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/upcoming_events_recycler_view"
        android:layout_width="@dimen/dimens_0_dp"
        android:layout_height="@dimen/dimens_0_dp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/dimens_12_dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/event_element_upcoming"
        android:visibility="gone"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/emoji_empty_upcomings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimens_24_dp"
        android:gravity="center"
        android:text="@string/relieved_face_emoji"
        android:textSize="@dimen/dimens_40_sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/feels_lonely_empty_upcomings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/feels_lonely_empty_upcomings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimens_8_dp"
        style="@style/TextAppearanceDescription"
        android:text="@string/feels_lonely_upcoming"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/book_meeting_suggestion_empty_upcomings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/book_meeting_suggestion_empty_upcomings"
        android:layout_width="@dimen/dimens_0_dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimens_16_dp"
        android:layout_marginTop="@dimen/dimens_16_dp"
        style="@style/TextAppearanceDescriptionDisabled"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="@dimen/dimens_5_sp"
        android:text="@string/book_meeting_suggestion_upcoming_empty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/progressBar_upcoming_events"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/yellow_for_selected_item"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>